lab05/Task3/style.css
ul {
    list-style-type: none;
    padding: 0;
    margin: 0;
    width: 250px;
    font-family: Arial, sans-serif;
}


ul.menu > li {
    background-color: #008a27;
    color: white;
    padding: 10px;
    border: 1px solid white;
    font-weight: bold;
}


ul.menu > li > ul {
    background-color: #ff8c00;
    margin-top: 10px;
    padding: 5px;
    width: auto;
}


ul.menu > li > ul > li {
    color: black;
    padding: 8px 15px;
    font-weight: normal;
    border: none;
}

ul.menu > li > ul {
    display: none;
}


ul.menu > li:hover > ul {
    display: block;
}

